<resources>
    <string name="app_name">뭐놀?</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="input_id">아이디</string>
    <string name="input_pass">패스워드 입력(영문,숫자, 특수문자 포함 8~16자)</string>
    <string name="checkpass">비밀번호 확인</string>
    <string name="find_Id">아이디 찾기</string>
    <string name="find_Pass">비밀번호 찾기</string>
    <string name="find_id_pass">아이디 / 비밀번호 찾기</string>
    <string name="nickName">닉네임</string>
    <string name="loginBtn">로그인하기</string>
    <string name="findIdBtn">아이디 찾기</string>
    <string name="findPassBtn">비밀번호 찾기</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="gender">성별</string>
    <string name="email">이메일</string>
    <string name="idCheck">중복확인</string>
    <string name="name">이름</string>
    <string name="birth">생년월일(6자리)</string>
    <string name="joinBtn">회원가입하기</string>
    <string name="no_pass">비밀번호를 입력해주세요</string>
    <string name="wrong_pass">형식에 맞게 입력해주세요</string>
    <string name="not_same_pass">비밀번호가 일치하지 않습니다</string>
    <string name="no_id">아이디를 입력해주세요</string>
    <string name="no_email">이메일을 입력해주세요</string>
    <string name="wrong_email">형식에 맞게 입력해주세요</string>
    <string name="input_complete">입력 완료</string>
    <string name="is_duplicate">중복된 아이디입니다</string>
    <string name="isNot_duplicate">사용가능한 아이디입니다</string>
    <string name="ok">Ok</string>
    <string name="Next">Next</string>
    <string name="check_id">아이디 확인</string>
    <string name="home">홈</string>
    <string name="place">장소찾기</string>
    <string name="mypage">마이페이지</string>
    <string name="make_course">코스만들기</string>
    <string name="find_place">장소검색</string>
    <string name="survey">설문조사</string>
    <string name="very_good">매우 그렇다</string>
    <string name="not_good">전혀 그렇지않다</string>
    <string name="first_question">나는 도전적인 것을 좋아한다</string>
    <string name="second_question">나는 이색적인 것을 좋아한다</string>
    <string name="third_question">나는 활동적인 것을 좋아한다</string>
    <string name="fourth_question">다음 중 가장 좋아하는 것은?</string>
    <string name="fifth_question">다음 중 가장 좋아하는 곳은?</string>
    <string name="sixth_question">휴일에 가장 하고싶은 활동은?</string>
    <string name="cafe">카페탐방</string>
    <string name="beer">음주</string>
    <string name="drawing">드로잉</string>
    <string name="roomescpae">방탈출</string>
    <string name="climbing">클라이밍</string>
    <string name="movies">영화관</string>
    <string name="skating">스케이트장</string>
    <string name="sauna">스파</string>
    <string name="aquarium">아쿠아리움</string>
    <string name="ocena">바다</string>

</resources>